--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# THINGSvision"
+    "# THINGSvision\n",
+    "This is the PyTorch version, you can find a TensorFlow example [here](https://colab.research.google.com/github/ViCCo-Group/THINGSvision/blob/master/doc/tensorflow.ipynb)"
    ]
   },
   {
@@ -119,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_image_path = os.path.join(mounted_dir, 'MyDrive', images_dir)\n",
+    "full_image_path = os.path.join(mounted_dir, 'MyDrive', image_dir)\n",
     "full_output_path = os.path.join(mounted_dir, 'MyDrive', output_dir)"
    ]
   },
@@ -253,7 +254,7 @@
     "                            model=model,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
-    "                            out_path=full_out_path,\n",
+    "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
@@ -314,7 +315,7 @@
     "                            model=model,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
-    "                            out_path=full_out_path,\n",
+    "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
@@ -322,7 +323,7 @@
     ")\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_dir}/features_{model_name}_{module_name}', 'npy')"
+    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
    ]
   },
   {
@@ -373,7 +374,7 @@
     "                            model=model,\n",
     "                            module_name=module_name,\n",
     "                            image_path=full_image_path,\n",
-    "                            out_path=full_out_path,\n",
+    "                            out_path=full_output_path,\n",
     "                            batch_size=batch_size,\n",
     "                            flatten_activations=flatten_activations,\n",
     "                            apply_center_crop=apply_center_crop,\n",
@@ -384,7 +385,7 @@
     "features = vision.center_features(features)\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_dir}/features_{model_name}_{module_name}', 'npy')"
+    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
    ]
   }
  ],
