added rdm computation to google colabs

--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -264,6 +264,40 @@
     "# save features to disk\n",
     "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Representational Similarity Analysis (RSA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute representational dissimilarity matrix\n",
+    "rdm = vision.compute_rdm(features, method='correlation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot rdm\n",
+    "vision.plot_rdm(\n",
+    "                out_path,\n",
+    "                features,\n",
+    "                method='correlation',\n",
+    "                format='.png',\n",
+    "                colormap='cividis',\n",
+    "                show_plot=True,\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -287,7 +321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
