added rdm computation to google colabs

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -262,7 +262,7 @@
     ")\n",
     "\n",
     "# save features to disk\n",
-    "#vision.save_features(features, f'{full_output_dir}/features_{model_name}_{module_name}', 'npy')"
+    "vision.save_features(features, f'{full_output_dir}/features_{model_name}_{module_name}', 'npy')"
    ]
   },
   {
