updated google colabs

--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -293,7 +293,7 @@
     "                out_path,\n",
     "                features,\n",
     "                method='correlation',\n",
-    "                format='.png',\n",
+    "                format='.png', # '.jpg'\n",
     "                colormap='cividis',\n",
     "                show_plot=True,\n",
     ")"
