updated vgg ecoset name; fix #34

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -342,7 +342,7 @@
    "outputs": [],
    "source": [
     "## load model\n",
-    "model_name = 'VGG16_ecoset'\n",
+    "model_name = 'VGG16bn_ecoset'\n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
