updated google colabs

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Helper function to extract features"
+    "### Helper functions to extract features"
    ]
   },
   {
@@ -154,6 +154,7 @@
     "                    apply_center_crop: bool,\n",
     "                    clip: bool=False,\n",
     ") -> np.ndarray:\n",
+    "    \"\"\"Extract features for a single layer.\"\"\"\n",
     "    dl = vision.load_dl(\n",
     "                        root=image_path,\n",
     "                        out_path=out_path,\n",
@@ -161,6 +162,7 @@
     "                        transforms=model.get_transformations(apply_center_crop=apply_center_crop),\n",
     "                        backend=backend,\n",
     "    )\n",
+    "    # exctract features\n",
     "    features, _ = model.extract_features(\n",
     "                                        data_loader=dl,\n",
     "                                        module_name=module_name,\n",
@@ -169,7 +171,34 @@
     "                                        clip=clip,\n",
     "                                        return_probabilities=False,\n",
     "    )\n",
-    "    return features"
+    "    return features\n",
+    "\n",
+    "\n",
+    "def extract_all_layers(\n",
+    "                        model_name: str,\n",
+    "                        model: Any,\n",
+    "                        image_path: str,\n",
+    "                        out_path: str,\n",
+    "                        batch_size: int,\n",
+    "                        flatten_activations: bool,\n",
+    "                        apply_center_crop: bool,\n",
+    "                        clip: bool=False,\n",
+    ") -> None:\n",
+    "    \"\"\"Extract features for all layers and save them to disk.\"\"\"\n",
+    "    for module_name, _ in model.model.named_modules():\n",
+    "        # extract features for layer \"module_name\"\n",
+    "        features = extract_features(\n",
+    "                                    model=model,\n",
+    "                                    module_name=module_name,\n",
+    "                                    image_path=image_path,\n",
+    "                                    out_path=out_path,\n",
+    "                                    batch_size=batch_size,\n",
+    "                                    flatten_activations=flatten_activations,\n",
+    "                                    apply_center_crop=apply_center_crop,\n",
+    "                                    clip=clip,\n",
+    "        )\n",
+    "        # save features to disk\n",
+    "        vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
    ]
   },
   {
@@ -207,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1: VGG-16 (pretrained on ImageNet)"
+    "### Example 1: VGG-16 with batch norm (pretrained on ImageNet)"
    ]
   },
   {
@@ -217,7 +246,7 @@
    "outputs": [],
    "source": [
     "## load model\n",
-    "model_name = 'vgg16' \n",
+    "model_name = 'vgg16_bn' \n",
     "model = Model(\n",
     "            model_name,\n",
     "            pretrained=pretrained,\n",
@@ -241,6 +270,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature extraction single layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -248,8 +284,7 @@
    },
    "outputs": [],
    "source": [
-    "# extract features\n",
-    "\n",
+    "# extract features for a single layer\n",
     "features = extract_features(\n",
     "                            model=model,\n",
     "                            module_name=module_name,\n",
@@ -262,14 +297,40 @@
     ")\n",
     "\n",
     "# save features to disk\n",
-    "vision.save_features(features, f'{full_output_dir}/features_{model_name}_{module_name}', 'npy')"
+    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 2: VGG-16 (pretrained on Ecoset)"
+    "#### Feature extraction all layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all layers and save them to disk\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    clip=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 2: VGG-16 with batch norm (pretrained on Ecoset)"
    ]
   },
   {
@@ -305,6 +366,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature extraction single layer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -324,6 +392,32 @@
     "\n",
     "# save features to disk\n",
     "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature extraction all layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all layers and save them to disk\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    clip=False,\n",
+    ")"
    ]
   },
   {
@@ -361,6 +455,13 @@
     "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
     "# module_name = model.show()\n",
     "module_name = 'visual' # penultimate layer in CLIP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Extract features for a single layer"
    ]
   },
   {
@@ -444,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
