--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Helper function to extract features"
+    "### Helper functions to extract features"
    ]
   },
   {
@@ -155,6 +155,7 @@
     "                    apply_center_crop: bool,\n",
     "                    clip: bool=False,\n",
     ") -> np.ndarray:\n",
+    "    \"\"\"Extract features for a single layer.\"\"\"\n",
     "    dl = vision.load_dl(\n",
     "                        root=image_path,\n",
     "                        out_path=out_path,\n",
@@ -162,6 +163,7 @@
     "                        transforms=model.get_transformations(apply_center_crop=apply_center_crop),\n",
     "                        backend=backend,\n",
     "    )\n",
+    "    # exctract features\n",
     "    features, _ = model.extract_features(\n",
     "                                        data_loader=dl,\n",
     "                                        module_name=module_name,\n",
@@ -170,7 +172,34 @@
     "                                        clip=clip,\n",
     "                                        return_probabilities=False,\n",
     "    )\n",
-    "    return features"
+    "    return features\n",
+    "\n",
+    "\n",
+    "def extract_all_layers(\n",
+    "                        model_name: str,\n",
+    "                        model: Any,\n",
+    "                        image_path: str,\n",
+    "                        out_path: str,\n",
+    "                        batch_size: int,\n",
+    "                        flatten_activations: bool,\n",
+    "                        apply_center_crop: bool,\n",
+    "                        clip: bool=False,\n",
+    ") -> None:\n",
+    "    \"\"\"Extract features for all layers and save them to disk.\"\"\"\n",
+    "    for module_name, _ in model.model.named_modules():\n",
+    "        # extract features for layer \"module_name\"\n",
+    "        features = extract_features(\n",
+    "                                    model=model,\n",
+    "                                    module_name=module_name,\n",
+    "                                    image_path=image_path,\n",
+    "                                    out_path=out_path,\n",
+    "                                    batch_size=batch_size,\n",
+    "                                    flatten_activations=flatten_activations,\n",
+    "                                    apply_center_crop=apply_center_crop,\n",
+    "                                    clip=clip,\n",
+    "        )\n",
+    "        # save features to disk\n",
+    "        vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
    ]
   },
   {
@@ -269,6 +298,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Feature extraction single layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for a single layer\n",
+    "features = extract_features(\n",
+    "                            model=model,\n",
+    "                            module_name=module_name,\n",
+    "                            image_path=full_image_path,\n",
+    "                            out_path=full_output_path,\n",
+    "                            batch_size=batch_size,\n",
+    "                            flatten_activations=flatten_activations,\n",
+    "                            apply_center_crop=apply_center_crop,\n",
+    "                            clip=False,\n",
+    ")\n",
+    "\n",
+    "# save features to disk\n",
+    "vision.save_features(features, f'{full_output_path}/features_{model_name}_{module_name}', 'npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature extraction all layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all layers and save them to disk\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    clip=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Representational Similarity Analysis (RSA)"
    ]
   },
@@ -321,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
