google colab update

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -54,6 +54,7 @@
    "source": [
     "import torch\n",
     "import os\n",
+    "import torch.nn as nn\n",
     "import thingsvision.vision as vision\n",
     "import numpy as np\n",
     "\n",
@@ -182,23 +183,25 @@
     "                        batch_size: int,\n",
     "                        flatten_activations: bool,\n",
     "                        apply_center_crop: bool,\n",
+    "                        layer: Any=nn.Linear,\n",
     "                        clip: bool=False,\n",
     ") -> None:\n",
     "    \"\"\"Extract features for all layers and save them to disk.\"\"\"\n",
-    "    for module_name, _ in model.model.named_modules():\n",
-    "        # extract features for layer \"module_name\"\n",
-    "        features = extract_features(\n",
-    "                                    model=model,\n",
-    "                                    module_name=module_name,\n",
-    "                                    image_path=image_path,\n",
-    "                                    out_path=out_path,\n",
-    "                                    batch_size=batch_size,\n",
-    "                                    flatten_activations=flatten_activations,\n",
-    "                                    apply_center_crop=apply_center_crop,\n",
-    "                                    clip=clip,\n",
-    "        )\n",
-    "        # save features to disk\n",
-    "        vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
+    "    for module_name, module in model.model.named_modules():\n",
+    "        if isinstance(module, layer):\n",
+    "            # extract features for layer \"module_name\"\n",
+    "            features = extract_features(\n",
+    "                                        model=model,\n",
+    "                                        module_name=module_name,\n",
+    "                                        image_path=image_path,\n",
+    "                                        out_path=out_path,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        flatten_activations=flatten_activations,\n",
+    "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        clip=clip,\n",
+    "            )\n",
+    "            # save features to disk\n",
+    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
    ]
   },
   {
@@ -304,7 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature extraction all layers"
+    "#### Feature extraction all convolutional or fully-connected layers"
    ]
   },
   {
@@ -313,7 +316,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract features for all layers and save them to disk\n",
+    "# extract features for all convolutional layers (i.e., Conv2d) and save them to disk\n",
+    "layer = nn.Conv2d\n",
     "extract_all_layers(\n",
     "                    model_name=model_name,\n",
     "                    model=model,\n",
@@ -322,6 +326,28 @@
     "                    batch_size=batch_size,\n",
     "                    flatten_activations=flatten_activations,\n",
     "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
+    "                    clip=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all fully-connected layers (i.e., Linear) and save them to disk\n",
+    "layer = nn.Linear\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
     "                    clip=False,\n",
     ")"
    ]
@@ -337,7 +363,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -398,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature extraction all layers"
+    "#### Feature extraction all convolutional or fully-connected layers"
    ]
   },
   {
@@ -407,7 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract features for all layers and save them to disk\n",
+    "# extract features for all convolutional layers (i.e., Conv2d) and save them to disk\n",
+    "layer = nn.Conv2d\n",
     "extract_all_layers(\n",
     "                    model_name=model_name,\n",
     "                    model=model,\n",
@@ -416,6 +443,28 @@
     "                    batch_size=batch_size,\n",
     "                    flatten_activations=flatten_activations,\n",
     "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
+    "                    clip=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all fully-connected layers (i.e., Linear) and save them to disk\n",
+    "layer = nn.Linear\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
     "                    clip=False,\n",
     ")"
    ]
@@ -461,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Extract features for a single layer"
+    "#### Feature extraction single layer"
    ]
   },
   {
@@ -482,7 +531,7 @@
     "                            clip=True,\n",
     ")\n",
     "\n",
-    "# apply centering (not necessary, but possible, depending on the analysis)\n",
+    "# apply centering (not necessary, but may be desirable, depending on the analysis)\n",
     "features = vision.center_features(features)\n",
     "\n",
     "# save features to disk\n",
