--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -563,7 +563,7 @@
    "source": [
     "# plot rdm\n",
     "vision.plot_rdm(\n",
-    "                out_path,\n",
+    "                full_output_path,\n",
     "                features,\n",
     "                method='correlation',\n",
     "                format='.png', # '.jpg'\n",
