--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -279,6 +279,7 @@
     "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
     "#module_name = model.show() \n",
     "module_name = 'fc1'"
+
    ]
   },
   {
@@ -384,7 +385,7 @@
    "source": [
     "# plot rdm\n",
     "vision.plot_rdm(\n",
-    "                out_path,\n",
+    "                full_output_path,\n",
     "                features,\n",
     "                method='correlation',\n",
     "                format='.png', # '.jpg'\n",
