updated google colabs and fixed tensorflow naming issue

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -186,7 +186,7 @@
     "                        layer: Any=nn.Linear,\n",
     "                        clip: bool=False,\n",
     ") -> None:\n",
-    "    \"\"\"Extract features for all layers and save them to disk.\"\"\"\n",
+    "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
     "    for module_name, module in model.model.named_modules():\n",
     "        if isinstance(module, layer):\n",
     "            # extract features for layer \"module_name\"\n",
