--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -55,6 +55,7 @@
     "import torch\n",
     "import tensorflow\n",
     "import os\n",
+    "import re\n",
     "import thingsvision.vision as vision\n",
     "import numpy as np\n",
     "\n",
@@ -175,6 +176,11 @@
     "    return features\n",
     "\n",
     "\n",
+    "def get_module_names(modules: list) -> list:\n",
+    "    \"\"\"Yield names associated with modules.\"\"\"\n",
+    "    return list(map(lambda m: m.name, modules))\n",
+    "\n",
+    "\n",
     "def extract_all_layers(\n",
     "                        model_name: str,\n",
     "                        model: Any,\n",
@@ -183,23 +189,26 @@
     "                        batch_size: int,\n",
     "                        flatten_activations: bool,\n",
     "                        apply_center_crop: bool,\n",
+    "                        layer: str='conv',\n",
     "                        clip: bool=False,\n",
     ") -> None:\n",
-    "    \"\"\"Extract features for all layers and save them to disk.\"\"\"\n",
-    "    for module_name, _ in model.model.named_modules():\n",
-    "        # extract features for layer \"module_name\"\n",
-    "        features = extract_features(\n",
-    "                                    model=model,\n",
-    "                                    module_name=module_name,\n",
-    "                                    image_path=image_path,\n",
-    "                                    out_path=out_path,\n",
-    "                                    batch_size=batch_size,\n",
-    "                                    flatten_activations=flatten_activations,\n",
-    "                                    apply_center_crop=apply_center_crop,\n",
-    "                                    clip=clip,\n",
-    "        )\n",
-    "        # save features to disk\n",
-    "        vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
+    "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
+    "    module_names = get_module_names(model.model.layers)\n",
+    "    for module_name in module_names:\n",
+    "        if re.search(f'{layer}', module_name):\n",
+    "            # extract features for layer \"module_name\"\n",
+    "            features = extract_features(\n",
+    "                                        model=model,\n",
+    "                                        module_name=module_name,\n",
+    "                                        image_path=image_path,\n",
+    "                                        out_path=out_path,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        flatten_activations=flatten_activations,\n",
+    "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        clip=clip,\n",
+    "            )\n",
+    "            # save features to disk\n",
+    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
    ]
   },
   {
@@ -243,7 +252,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "## load model\n",
@@ -267,7 +278,7 @@
     "\n",
     "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
     "#module_name = model.show() \n",
-    "module_name = 'features.23' "
+    "module_name = 'fc1'"
    ]
   },
   {
@@ -303,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Feature extraction all layers"
+    "#### Feature extraction all convolutional or fully-connected layers"
    ]
   },
   {
@@ -312,7 +323,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract features for all layers and save them to disk\n",
+    "# extract features for all convolutional layers (i.e., block#_conv#) and save them to disk\n",
+    "layer = 'conv'\n",
     "extract_all_layers(\n",
     "                    model_name=model_name,\n",
     "                    model=model,\n",
@@ -321,6 +333,28 @@
     "                    batch_size=batch_size,\n",
     "                    flatten_activations=flatten_activations,\n",
     "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
+    "                    clip=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract features for all fully-connected layers (i.e., fc#) and save them to disk\n",
+    "layer = 'fc'\n",
+    "extract_all_layers(\n",
+    "                    model_name=model_name,\n",
+    "                    model=model,\n",
+    "                    image_path=full_image_path,\n",
+    "                    out_path=full_output_path,\n",
+    "                    batch_size=batch_size,\n",
+    "                    flatten_activations=flatten_activations,\n",
+    "                    apply_center_crop=apply_center_crop,\n",
+    "                    layer=layer,\n",
     "                    clip=False,\n",
     ")"
    ]
