updated google colabs

--- a/doc/pytorch.ipynb
+++ b/doc/pytorch.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "from thingsvision.model_class import Model\n",
     "from google.colab import drive\n",
-    "from typing import Any"
+    "from typing import Any, Dict"
    ]
   },
   {
@@ -185,9 +185,10 @@
     "                        apply_center_crop: bool,\n",
     "                        layer: Any=nn.Linear,\n",
     "                        clip: bool=False,\n",
-    ") -> None:\n",
+    ") -> Dict[str, np.ndarray]:\n",
     "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
-    "    for module_name, module in model.model.named_modules():\n",
+    "    features_per_layer = {}\n",
+    "    for l, (module_name, module) in enumerate(model.model.named_modules(), start=1):\n",
     "        if isinstance(module, layer):\n",
     "            # extract features for layer \"module_name\"\n",
     "            features = extract_features(\n",
@@ -200,8 +201,11 @@
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        clip=clip,\n",
     "            )\n",
+    "            # replace with e.g., [f'conv_{l:02d}'] or [f'fc_{l:02d}']\n",
+    "            features_per_layer[f'layer_{l:02d}'] = features\n",
     "            # save features to disk\n",
-    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
+    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy')\n",
+    "    return features_per_layer"
    ]
   },
   {
@@ -267,7 +271,7 @@
    "source": [
     "## select layer\n",
     "\n",
-    "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
+    "# NOTE: uncomment the line below, if you are uncertain about layer naming in PyTorch\n",
     "# module_name = model.show() \n",
     "module_name = 'features.23' "
    ]
@@ -287,7 +291,7 @@
    },
    "outputs": [],
    "source": [
-    "# extract features for a single layer\n",
+    "# extract features for a single layer (e.g., penultimate)\n",
     "features = extract_features(\n",
     "                            model=model,\n",
     "                            module_name=module_name,\n",
@@ -318,16 +322,16 @@
    "source": [
     "# extract features for all convolutional layers (i.e., Conv2d) and save them to disk\n",
     "layer = nn.Conv2d\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_conv_layers = extract_all_layers(\n",
+    "                                            model_name=model_name,\n",
+    "                                            model=model,\n",
+    "                                            image_path=full_image_path,\n",
+    "                                            out_path=full_output_path,\n",
+    "                                            batch_size=batch_size,\n",
+    "                                            flatten_activations=flatten_activations,\n",
+    "                                            apply_center_crop=apply_center_crop,\n",
+    "                                            layer=layer,\n",
+    "                                            clip=False,\n",
     ")"
    ]
   },
@@ -339,16 +343,16 @@
    "source": [
     "# extract features for all fully-connected layers (i.e., Linear) and save them to disk\n",
     "layer = nn.Linear\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_fc_layers = extract_all_layers(\n",
+    "                                        model_name=model_name,\n",
+    "                                        model=model,\n",
+    "                                        image_path=full_image_path,\n",
+    "                                        out_path=full_output_path,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        flatten_activations=flatten_activations,\n",
+    "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        layer=layer,\n",
+    "                                        clip=False,\n",
     ")"
    ]
   },
@@ -386,7 +390,7 @@
    "source": [
     "## select layer\n",
     "\n",
-    "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
+    "# NOTE: uncomment the line below, if you are uncertain about layer naming in PyTorch\n",
     "# module_name = model.show() \n",
     "module_name = 'features.23' "
    ]
@@ -404,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract features\n",
+    "# extract features for a single layer (e.g., penultimate)\n",
     "features = extract_features(\n",
     "                            model=model,\n",
     "                            module_name=module_name,\n",
@@ -435,16 +439,16 @@
    "source": [
     "# extract features for all convolutional layers (i.e., Conv2d) and save them to disk\n",
     "layer = nn.Conv2d\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_conv_layers = extract_all_layers(\n",
+    "                                            model_name=model_name,\n",
+    "                                            model=model,\n",
+    "                                            image_path=full_image_path,\n",
+    "                                            out_path=full_output_path,\n",
+    "                                            batch_size=batch_size,\n",
+    "                                            flatten_activations=flatten_activations,\n",
+    "                                            apply_center_crop=apply_center_crop,\n",
+    "                                            layer=layer,\n",
+    "                                            clip=False,\n",
     ")"
    ]
   },
@@ -456,16 +460,16 @@
    "source": [
     "# extract features for all fully-connected layers (i.e., Linear) and save them to disk\n",
     "layer = nn.Linear\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_fc_layers = extract_all_layers(\n",
+    "                                        model_name=model_name,\n",
+    "                                        model=model,\n",
+    "                                        image_path=full_image_path,\n",
+    "                                        out_path=full_output_path,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        flatten_activations=flatten_activations,\n",
+    "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        layer=layer,\n",
+    "                                        clip=False,\n",
     ")"
    ]
   },
@@ -501,7 +505,7 @@
    "source": [
     "## select layer\n",
     "\n",
-    "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
+    "# NOTE: uncomment the line below, if you are uncertain about layer naming of CLIP\n",
     "# module_name = model.show()\n",
     "module_name = 'visual' # penultimate layer in CLIP"
    ]
