--- a/doc/tensorflow.ipynb
+++ b/doc/tensorflow.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "from thingsvision.model_class import Model\n",
     "from google.colab import drive\n",
-    "from typing import Any"
+    "from typing import Any, Dict, List"
    ]
   },
   {
@@ -176,8 +176,8 @@
     "    return features\n",
     "\n",
     "\n",
-    "def get_module_names(modules: list) -> list:\n",
-    "    \"\"\"Yield names associated with modules.\"\"\"\n",
+    "def get_module_names(modules: List[Any]) -> List[str]:\n",
+    "    \"\"\"Yield module names associated with layers.\"\"\"\n",
     "    return list(map(lambda m: m.name, modules))\n",
     "\n",
     "\n",
@@ -191,10 +191,11 @@
     "                        apply_center_crop: bool,\n",
     "                        layer: str='conv',\n",
     "                        clip: bool=False,\n",
-    ") -> None:\n",
+    ") -> Dict[str, np.ndarray]:\n",
     "    \"\"\"Extract features for all selected layers and save them to disk.\"\"\"\n",
+    "    features_per_layer = {}\n",
     "    module_names = get_module_names(model.model.layers)\n",
-    "    for module_name in module_names:\n",
+    "    for l, module_name in enumerate(module_names, start=1):\n",
     "        if re.search(f'{layer}', module_name):\n",
     "            # extract features for layer \"module_name\"\n",
     "            features = extract_features(\n",
@@ -207,8 +208,11 @@
     "                                        apply_center_crop=apply_center_crop,\n",
     "                                        clip=clip,\n",
     "            )\n",
+    "            # replace with e.g., [f'conv_{l:02d}'] or [f'fc_{l:02d}']\n",
+    "            features_per_layer[f'layer_{l:02d}'] = features\n",
     "            # save features to disk\n",
-    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy') "
+    "            vision.save_features(features, f'{out_path}/features_{model_name}_{module_name}', 'npy')\n",
+    "    return features_per_layer"
    ]
   },
   {
@@ -276,10 +280,9 @@
    "source": [
     "## select layer\n",
     "\n",
-    "# NOTE: uncomment the line below, if you are uncertain about layer naming\n",
-    "#module_name = model.show() \n",
-    "module_name = 'fc1'"
-
+    "# NOTE: uncomment the line below, if you are uncertain about layer naming in TensorFlow\n",
+    "# module_name = model.show() \n",
+    "module_name = 'fc1' # 'block1_conv1'"
    ]
   },
   {
@@ -295,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract features for a single layer\n",
+    "# extract features for a single layer (e.g., penultimate)\n",
     "features = extract_features(\n",
     "                            model=model,\n",
     "                            module_name=module_name,\n",
@@ -326,16 +329,16 @@
    "source": [
     "# extract features for all convolutional layers (i.e., block#_conv#) and save them to disk\n",
     "layer = 'conv'\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_conv_layers = extract_all_layers(\n",
+    "                                            model_name=model_name,\n",
+    "                                            model=model,\n",
+    "                                            image_path=full_image_path,\n",
+    "                                            out_path=full_output_path,\n",
+    "                                            batch_size=batch_size,\n",
+    "                                            flatten_activations=flatten_activations,\n",
+    "                                            apply_center_crop=apply_center_crop,\n",
+    "                                            layer=layer,\n",
+    "                                            clip=False,\n",
     ")"
    ]
   },
@@ -347,16 +350,16 @@
    "source": [
     "# extract features for all fully-connected layers (i.e., fc#) and save them to disk\n",
     "layer = 'fc'\n",
-    "extract_all_layers(\n",
-    "                    model_name=model_name,\n",
-    "                    model=model,\n",
-    "                    image_path=full_image_path,\n",
-    "                    out_path=full_output_path,\n",
-    "                    batch_size=batch_size,\n",
-    "                    flatten_activations=flatten_activations,\n",
-    "                    apply_center_crop=apply_center_crop,\n",
-    "                    layer=layer,\n",
-    "                    clip=False,\n",
+    "features_fc_layers = extract_all_layers(\n",
+    "                                        model_name=model_name,\n",
+    "                                        model=model,\n",
+    "                                        image_path=full_image_path,\n",
+    "                                        out_path=full_output_path,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        flatten_activations=flatten_activations,\n",
+    "                                        apply_center_crop=apply_center_crop,\n",
+    "                                        layer=layer,\n",
+    "                                        clip=False,\n",
     ")"
    ]
   },
